--- a/src/components/LeftsideNav/LeftsideNav.css
+++ b/src/components/LeftsideNav/LeftsideNav.css
@@ -3,4 +3,27 @@
   width: 270px;
   padding: 24px 32px;
   height: 100vh;
+}
+.leftsidenav-main .LeftNavLink {
+  cursor: pointer;
+  display: flex;
+  color: #fff;
+  gap: 14px;
+  align-items: center;
+  margin-left: 10px;
+  margin-bottom: 40px;
+}
+.leftsidenav-main .LeftNavLink h3 {
+  transition: 0.3s;
+}
+.leftsidenav-main .LeftNavLink h3:hover {
+  color: #fff;
+}
+.leftsidenav-main .leftside-logo {
+  margin-bottom: 60px;
+}
+.leftsidenav-main .leftside-category-name {
+  margin: 30px 0px;
+  margin-left: 10px;
+  letter-spacing: 3px;
 }/*# sourceMappingURL=LeftsideNav.css.map */
