--- a/src/components/LeftsideNav/LeftsideNav.scss
+++ b/src/components/LeftsideNav/LeftsideNav.scss
@@ -3,4 +3,28 @@
   width: 270px;
   padding: 24px 32px;
   height: 100vh;
+
+  .LeftNavLink {
+    cursor: pointer;
+    display: flex;
+    color: #fff;
+    gap: 14px;
+    align-items: center;
+    margin-left: 10px;
+    margin-bottom: 40px;
+    h3 {
+      transition: 0.3s;
+    }
+    h3:hover {
+      color: #fff;
+    }
+  }
+  .leftside-logo {
+    margin-bottom: 60px;
+  }
+  .leftside-category-name {
+    margin: 30px 0px;
+    margin-left: 10px;
+    letter-spacing: 3px;
+  }
 }
