--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 }
 .App {
   display: flex;
+  height: 100%;
 }
 h1 {
   font-family: "Poppins", sans-serif;
@@ -14,7 +15,8 @@ h1 {
   line-height: 40px;
   font-size: 40px;
 }
-h2 {
+h2,
+a {
   color: rgb(255, 255, 255);
   font-family: "Poppins", sans-serif;
   font-size: 16px;
