--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,1 +1,19 @@
-/*# sourceMappingURL=Header.css.map */
+header {
+  width: 100%;
+}
+
+nav {
+  background-color: black;
+  padding: 32px;
+  width: 100%;
+}
+nav ul {
+  display: flex;
+  gap: 20px;
+}
+nav ul li {
+  list-style-type: none;
+}
+nav ul li a {
+  text-decoration: none;
+}/*# sourceMappingURL=Header.css.map */
