--- a/src/components/LeftsideNav/LeftsideNav.css
+++ b/src/components/LeftsideNav/LeftsideNav.css
@@ -2,7 +2,9 @@
   background: rgb(33, 32, 30);
   width: 270px;
   padding: 24px 32px;
-  height: 100vh;
+}
+.leftsidenav-main .leftside-nav-fixed {
+  position: fixed;
 }
 .leftsidenav-main .LeftNavLink {
   cursor: pointer;
@@ -15,6 +17,7 @@
 }
 .leftsidenav-main .LeftNavLink h3 {
   transition: 0.3s;
+  width: 100%;
 }
 .leftsidenav-main .LeftNavLink h3:hover {
   color: #fff;
