--- a/src/components/RightsideNav/RightsideNav.css
+++ b/src/components/RightsideNav/RightsideNav.css
@@ -1,1 +1,35 @@
-/*# sourceMappingURL=RightsideNav.css.map */
+.RightSideNav {
+  width: 391px;
+  background: rgb(33, 32, 30);
+  padding: 32px;
+}
+.RightSideNav .rightnav-header {
+  margin-bottom: 40px;
+  display: flex;
+  gap: 24px;
+  align-items: center;
+}
+.RightSideNav .rightnav-header svg {
+  color: #fff;
+}
+.RightSideNav .rightnav-header .user {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.RightSideNav .rightnav-header .user h2 {
+  line-height: unset;
+  font-size: 12px;
+}
+
+.continue-watching {
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgb(72, 71, 68);
+  margin: 50px 0px;
+}
+
+.RightsideCard {
+  margin-top: 30px;
+  display: flex;
+  gap: 10px;
+}/*# sourceMappingURL=RightsideNav.css.map */
