--- a/src/components/RightsideNav/RightsideNav.css
+++ b/src/components/RightsideNav/RightsideNav.css
@@ -3,6 +3,15 @@
   background: rgb(33, 32, 30);
   padding: 32px;
 }
+.RightSideNav .nav-overflow {
+  height: 100vh;
+  overflow-y: scroll;
+  position: fixed;
+  /* width */
+}
+.RightSideNav .nav-overflow::-webkit-scrollbar {
+  width: 10px;
+}
 .RightSideNav .rightnav-header {
   margin-bottom: 40px;
   display: flex;
@@ -29,7 +38,12 @@
 }
 
 .RightsideCard {
-  margin-top: 30px;
+  margin-top: 15px;
+  padding-bottom: 15px;
   display: flex;
   gap: 10px;
+}
+.RightsideCard img {
+  width: 72px;
+  height: 74px;
 }/*# sourceMappingURL=RightsideNav.css.map */
