--- a/src/components/Movie/Movie.css
+++ b/src/components/Movie/Movie.css
@@ -1,1 +1,10 @@
-/*# sourceMappingURL=Movie.css.map */
+.movie-main {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+.movie-main video {
+  width: 80%;
+  height: 50%;
+}/*# sourceMappingURL=Movie.css.map */
