--- a/src/components/Movie/Movie.scss
+++ b/src/components/Movie/Movie.scss
@@ -1,10 +1,46 @@
 .movie-main {
   width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
+  padding: 50px 150px;
+  h1 {
+    color: rgb(58, 58, 58);
+    margin: 90px 0px;
+    font-weight: 400;
+  }
+
+  .video-main {
+    width: 100%;
+  }
   video {
-    width: 80%;
+    width: 100%;
     height: 50%;
+  }
+
+  .movie-info {
+    margin-top: 50px;
+    display: flex;
+    gap: 20px;
+    h2 {
+      color: black;
+      border-bottom: 1px solid grey;
+      padding-bottom: 10px;
+    }
+    p {
+      margin: 20px 0px;
+      color: rgb(28, 28, 28);
+      font-size: 13px;
+    }
+    h4 {
+      color: black;
+      margin-bottom: 10px;
+      font-family: "Poppins", sans-serif;
+    }
+    .movie-img {
+      img {
+        width: 200px;
+        height: 300px;
+        object-position: center;
+        border-radius: 5px;
+      }
+    }
   }
 }
