--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -124,6 +124,7 @@ nav {
     margin-bottom: 30px;
     position: relative;
     height: 250px;
+    animation: 2s movie;
 
     img {
       width: 100%;
@@ -188,5 +189,14 @@ nav {
     p {
       color: #7f7f7f;
     }
+  }
+}
+
+@keyframes movie {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
