--- a/src/components/PageNotFound/PageNotFound.css
+++ b/src/components/PageNotFound/PageNotFound.css
@@ -1,8 +1,9 @@
 .notfound-main {
   width: 100%;
   height: 100vh;
-  background-color: rgb(33, 32, 25);
+  background-color: #242424;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -11,5 +12,4 @@
 }
 .notfound-main a {
   font-size: 19px;
-  margin-left: 2px;
 }/*# sourceMappingURL=PageNotFound.css.map */
