--- a/src/components/WatchList/WatchList.scss
+++ b/src/components/WatchList/WatchList.scss
@@ -22,8 +22,12 @@
   }
   .allMovie {
     .movie {
-      width: 40%;
+      width: 48%;
       height: 300px;
     }
+  }
+  h1 {
+    text-align: center;
+    margin: 20px 0px;
   }
 }
