--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -55,6 +55,10 @@ nav {
   position: relative;
   z-index: 1;
   width: 100%;
+  display: flex;
+  justify-content: left;
+  gap: 30px;
+  align-items: center;
 }
 nav ul {
   display: flex;
@@ -65,6 +69,20 @@ nav ul li {
 }
 nav ul li a {
   text-decoration: none;
+}
+nav button {
+  border: 1px solid #fff;
+  background-color: transparent;
+  color: #fff;
+  height: 40px;
+  width: 170px;
+  cursor: pointer;
+  display: none;
+  position: relative;
+  z-index: 99999;
+}
+nav svg {
+  display: none;
 }
 
 .blur {
