--- a/src/components/Movie/Movie.scss
+++ b/src/components/Movie/Movie.scss
@@ -1,8 +1,14 @@
+.movie-page {
+  nav {
+    display: none;
+  }
+}
 .movie-main {
   width: 100%;
   padding: 50px 150px;
+  background: rgb(33, 32, 30);
   h1 {
-    color: rgb(58, 58, 58);
+    color: #fff;
     margin: 90px 0px;
     font-weight: 400;
   }
@@ -12,7 +18,7 @@
   }
   video {
     width: 100%;
-    height: 50%;
+    height: 100%;
   }
 
   .movie-info {
@@ -20,17 +26,17 @@
     display: flex;
     gap: 20px;
     h2 {
-      color: black;
+      color: #fff;
       border-bottom: 1px solid grey;
       padding-bottom: 10px;
     }
     p {
       margin: 20px 0px;
-      color: rgb(28, 28, 28);
+      color: rgb(221, 221, 221);
       font-size: 13px;
     }
     h4 {
-      color: black;
+      color: rgb(255, 254, 254);
       margin-bottom: 10px;
       font-family: "Poppins", sans-serif;
     }
@@ -41,6 +47,55 @@
         object-position: center;
         border-radius: 5px;
       }
+    }
+  }
+}
+@media screen and (max-width: 1400px) {
+  .movie-main {
+    padding: 80px;
+  }
+}
+@media screen and (max-width: 991px) {
+  h1 {
+    font-size: 30px;
+  }
+  .suggest-movies {
+    flex-wrap: wrap;
+    .suggest-movie {
+      width: 44% !important;
+      margin: auto;
+    }
+  }
+  .movie-page {
+    nav {
+      display: flex;
+    }
+    .movie-main {
+      padding: 150px 40px 40px 40px;
+      .video-main {
+        height: 240px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 590px) {
+  .movie-info {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border-bottom: 1px solid white;
+    padding-bottom: 50px;
+  }
+  h1 {
+    margin: 40px 0px !important;
+    font-size: 20px;
+    text-align: center;
+  }
+  .suggest-movies {
+    flex-wrap: wrap;
+    .suggest-movie {
+      width: 100% !important;
+      margin: auto;
     }
   }
 }
