--- a/src/components/RightsideNav/RightsideNav.scss
+++ b/src/components/RightsideNav/RightsideNav.scss
@@ -2,6 +2,7 @@
   width: 391px;
   background: rgb(33, 32, 30);
   padding: 32px;
+  transition: 0.8s;
 
   .nav-overflow {
     height: 100vh;
@@ -46,4 +47,40 @@
   padding-bottom: 15px;
   display: flex;
   gap: 10px;
+}
+@media screen and (max-width: 1400px) {
+  .RightSideNav {
+    z-index: 111;
+    padding: 30px 15px;
+    position: fixed;
+    transform: translateX(100%);
+    right: 0px;
+    height: 100%;
+    width: 200px;
+    .rightnav-header {
+      display: block;
+      align-items: start;
+      gap: 20px;
+      svg {
+        display: inline-block;
+        margin-right: 20px;
+        margin-bottom: 20px;
+      }
+    }
+    .RightsideCard {
+      h2 {
+        font-size: 12px;
+      }
+    }
+  }
+  .afterRightside-nav {
+    transform: translateX(0%);
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .RightSideNav {
+    margin-top: 104px;
+    background-color: #282828;
+  }
 }
