--- a/src/components/Main/MainQuery/mainquery.css
+++ b/src/components/Main/MainQuery/mainquery.css
@@ -31,6 +31,7 @@
     background-color: #282828;
     z-index: 10;
     gap: 15px;
+    top: 0px;
   }
   nav svg {
     display: block;
@@ -39,6 +40,9 @@
   }
   header .header-text {
     margin-top: 150px;
+  }
+  .allMovie .movie-info button {
+    display: none;
   }
 }
 @media screen and (max-width: 740px) {
