--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -154,6 +154,9 @@ nav {
   }
 }
 .allMovie {
+  a {
+    text-decoration: none;
+  }
   .movie-info {
     opacity: 0;
     border-radius: 5px;
@@ -174,9 +177,6 @@ nav {
       opacity: 1;
 
       left: 0px;
-      button {
-        display: block;
-      }
     }
   }
 
